...
    "Cancel": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Abbrechen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
...
    "Given twice": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Doppelt gegeben"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Given twice"
...
