...

        let patient = Patient.makeDefault(in: context)
        patient.name = "Mia"
        patient.birthDate = calendar.date(byAdding: .year, value: -6, to: today)

        let antibiotic = Medication.make(in: context, patient: patient)
        antibiotic.name = "Amoxicillin"
        antibiotic.formEnum = .liquid
        antibiotic.doseAmount = 5
        antibiotic.doseUnit = "ml"
        antibiotic.strengthText = "250 mg / 5 ml"
        antibiotic.instructions = "With a meal"
        antibiotic.colorHex = MedColor.teal.rawValue
...
